--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+body,
+.App {
+  height: 100vh;
+  width: 100vw;
+}
 * {
   box-sizing: border-box;
   margin: 0;
