--- a/src/pages/Auth/auth.module.scss
+++ b/src/pages/Auth/auth.module.scss
@@ -2,8 +2,9 @@
   background-color: #4a218e;
   opacity: 0.7;
   width: 100%;
-  height: 100%;
+  // height: 100%;
  padding: 50px;
+ min-width: 576px;
 
 }
 .content {
@@ -62,7 +63,12 @@
   margin-right: 0px;
 }
 
-  .input:focus{
-    outline: none;
-  }
+.input:focus{
+  outline: none;
+}
+
+.avatar {
+  max-width: 260px;
+  // width: 100%;
+}
 
