fixed rooms css

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,9 @@ body {
 
   background-color: rgb(74, 33, 142, 0.7);
 }
-body, .App{
-  /* height: 100vh; */
+body,
+.App {
+  height: 100vh;
   width: 100vw;
 }
 * {
