--- a/src/pages/Rooms/rooms.module.scss
+++ b/src/pages/Rooms/rooms.module.scss
@@ -1,9 +1,9 @@
-.roomsList{
-    background-color: #9f85ca;
-    max-width: 1800px;
-
-    display: flex;
-    flex-wrap: wrap;
-    margin: 70px auto;
-    justify-content: center;
+.roomsList {
+  background-color: #9f85ca;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: 860px;
+  overflow-y: auto;
+  border-radius: 15px;
 }
