--- a/src/components/Player/player.module.scss
+++ b/src/components/Player/player.module.scss
@@ -1,19 +1,58 @@
 .wrap {
-  width: 80%;
-  min-width: 320px;
-  height: 100px;
+  // width: 80%;
+  // width: 95%;
+  // min-width: 320px;
+  // height: 100px;
   background: white;
   z-index: 3;
   opacity: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
+  // padding: 16px;
+  padding: 2%;
   border-radius: 50px 12px 12px 50px;
-  margin: 8px 1px;
+  // margin: 8px 1px;
+  margin: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   & p {
     font-weight: 500;
-    height: 20px;
+    // height: 20px;
+  }
+}
+.avatar {
+  width: 5vw;  
+}
+.playerinfo {
+  font-size: 1.4vw;
+  margin: auto 1.4vw;
+}
+
+.playerinfo span {
+  color: grey;
+}
+
+.placeimg{
+  padding-right: 1vw;
+}
+@media (max-width: 1130px) {
+  .content {
+    margin: 0 auto;
+  }
+  .authBlock {
+    display: inline-flex;
+    justify-content: space-evenly;
+    
+  }
+  .placeimg {
+    display: none;
+  }
+  
+  
+}
+
+@media (max-width: 768px) {
+  .playerinfo{
+    display: none;
   }
 }
