--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,40 @@
 body {
+  min-width: 360px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   width: 100%;
-
-  background-color: rgb(74, 33, 142, 0.7);
+  background: linear-gradient(-45deg, #ee7652c3, #e73c7eb5, #a129ebc1, #6e65eab7);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
 }
 body,
 .App {
   height: 100vh;
   width: 100vw;
+
 }
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+
 .App {
-  background: rgba(74, 33, 142, 0.7);
-  padding: 40px 55px;
+ 
 }
+
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
+}
+
