--- a/src/pages/Auth/auth.module.scss
+++ b/src/pages/Auth/auth.module.scss
@@ -1,15 +1,11 @@
 .wrap {
-  background-color: #4a218e;
   opacity: 0.7;
   width: 100%;
-  // height: 100%;
- padding: 50px;
- min-width: 576px;
-
+  padding: 50px;
 }
 .content {
   height: 650px;
-  width: 100%;
+  margin: auto 20%;
   background: rgba(217, 217, 217, 0.26);
   border-radius: 15px;
   display: flex;
@@ -25,34 +21,29 @@
 
 .authBlock{
   display: inline-flex;
-    justify-content: space-between;
-    width: 373px;
+  justify-content: space-between;
+  width: 373px;
 }
 .input {
-  width: 373px;
+  max-width: 373px;
   height: 60px;
   padding: 10px;
   border-radius: 15px;
+  font-size: 24px;
 }
 .guest, .login {
   width: 50%;
   height: 70px;
-  
   border-radius: 1%;
   border: 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
-  font-size: 28px;
+  font-size: 4vmin;
   line-height: 39px;
-  /* identical to box height */
-
   text-align: center;
-
   color: #FFFFFF;
-
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
-
 }
 .guest {
   background: transparent;
@@ -69,6 +60,22 @@
 
 .avatar {
   max-width: 260px;
-  // width: 100%;
 }
 
+.scrollingImage {
+  background: url("../../assets/city.png") repeat-x;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+@media (max-width: 768px) {
+  .content{
+    margin: 0 auto;
+  }
+  .authBlock{
+    display: inline-flex;
+    justify-content: space-evenly;
+    
+  }
+}
