--- a/src/pages/Game/game.module.scss
+++ b/src/pages/Game/game.module.scss
@@ -1,19 +1,28 @@
+.wrap {
+  // opacity: 0.7;
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+}
 .content {
   height: 100%;
   width: 100%;
-  background: #fff;
+  // background: #fff;
   border-radius: 50px 15px 15px 15px;
   display: flex;
 }
 .players {
-  width: 28%;
+  // width: 28%;
   background: rgba(74, 33, 142, 0.2);
   height: 100%;
   flex-shrink: 0;
   position: relative;
   border-radius: 50px 0px 0px 15px;
+  background-color: #ffffff9e;
+  padding: 0.5%;
 }
 .board {
-  width: 72%;
+  width: 100%;
   height: 100%;
+  background-color: white;
 }
