--- a/src/pages/Game/parts/ActiveGame/activeGame.module.scss
+++ b/src/pages/Game/parts/ActiveGame/activeGame.module.scss
@@ -2,7 +2,8 @@
   max-width: 100%;
   height: 100%;
   flex-grow: 1;
-  padding: 95px 15% 260px 15%;
+  // padding: 95px 15% 260px 15%;
+  padding: 6vmin 15% 25vmin 15%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,22 +16,22 @@
   }
 
   & h2 {
-    font-size: 64px;
+    font-size: 4vmin;
     font-weight: 400;
     line-height: 1;
   }
 
   & h1 {
-    font-size: 96px;
+    font-size: 9vmin;
     font-weight: 400;
     line-height: 1;
   }
 
   & input {
-    height: 110px;
+    height: 10vmin;
     border-radius: 3px;
 
-    font-size: 64px;
+    font-size: 8vmin;
     animation: blink 3s linear infinite;
     @keyframes blink {
       0% {
@@ -56,8 +57,8 @@
 }
 .copy {
   position: absolute;
-  bottom: 75px;
-  left: -12%;
+  bottom: 10vmin;
+  left: -20vmin;
   & span {
     font-size: 36px;
     font-weight: 500;
