--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
-  width: 100%;
+
   background: linear-gradient(-45deg, #ee7652c3, #e73c7eb5, #a129ebc1, #6e65eab7);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
 body,
-.App {
-  height: 100vh;
-  width: 100vw;
+#root,
+.App, html {
+  height: 100%;
+  width: 100%;
 
 }
 * {
