--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -29,7 +29,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
-  font-size: 3vmin;
+  font-size: 3.5vmin;
   line-height: 24px;
   text-align: center;
 
@@ -48,7 +48,7 @@
 .button_size_medium {
   justify-content: center;
   align-items: center;
-  padding: 10px 16px;
+  /* padding: 10px 16px; */
   width: 27vmin;
   background: #FFFFFF;
   box-shadow: 0px 6px 6px #301A6B;
