--- a/src/pages/Auth/auth.module.scss
+++ b/src/pages/Auth/auth.module.scss
@@ -1,10 +1,10 @@
 .wrap {
-  opacity: 0.7;
+  opacity: 0.85;
   width: 100%;
   padding: 5vmin;
 }
 .content {
-  max-height: 150vmin;
+  max-height: 200vmin;
   margin: auto 20%;
   background: rgba(217, 217, 217, 0.26);
   border-radius: 15px;
@@ -23,6 +23,7 @@
   display: inline-flex;
   justify-content: space-between;
   width: 80%;
+  height: 10vmin;
 }
 .input {
   max-width: 373px;
@@ -68,6 +69,17 @@
   height: 100%;
   width: 100%;
   position: absolute;
+}
+.username{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 9vmin;
+  line-height: 39px;
+  text-align: center;
+  color: #FFFFFF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 9vmin 0;
 }
 
 @media (max-width: 768px) {
