--- a/src/components/ChangeLang/changelang.module.css
+++ b/src/components/ChangeLang/changelang.module.css
@@ -1,7 +1,7 @@
 .input {
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 7vmin;
+  height: 7vmin;
   margin: auto 2vmin;
   border-radius: 50%;
   align-self: center;
