--- a/src/pages/Game/parts/ActiveGame/activeGame.module.scss
+++ b/src/pages/Game/parts/ActiveGame/activeGame.module.scss
@@ -49,6 +49,12 @@
     }
     
   }
+  & button {
+    width: 100px;
+    height: 100px;
+    background: violet;
+
+  }
   
   & input:focus {
     border: 3px solid black;
@@ -103,3 +109,41 @@
   transform: rotate(45deg);
   border-radius: 15px;
 }
+
+// .progressbar {
+//   position: relative;
+//   overflow: hidden;
+//   width: 100%;
+//   height: 100%;
+//   border-radius: 24px;
+// }
+
+// .progressPercent {
+//   font-weight: 600;
+//   font-size: 4vw;
+//   animation: blink 3s linear infinite;
+//   position: absolute;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, -50%);
+//   color:#eee;
+//   text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
+// }
+
+// .progressColor {
+//   background-color: rgb(126, 0, 204);
+//       background-size: 30px 30px;
+//       background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%,
+//                         transparent 25%,
+//                         transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
+//                         transparent 75%, transparent);
+//       animation: animate-stripes 3s linear infinite, gradient 15s ease infinite;
+//   }        
+//   @keyframes animate-stripes {
+//       0% {
+//       background-position: 0 0;
+//       }
+//       100% {
+//       background-position: 60px 0;
+//       }
+// }
