--- a/src/pages/Auth/auth.module.scss
+++ b/src/pages/Auth/auth.module.scss
@@ -84,9 +84,9 @@
 }
 
 @media (max-width: 768px) {
-  .content{
-    margin: 0 auto;
-  }
+  // .content{
+  //   margin: 0 auto;
+  // }
   .authBlock{
     display: inline-flex;
     justify-content: space-between;
