--- a/src/pages/Game/game.module.scss
+++ b/src/pages/Game/game.module.scss
@@ -19,8 +19,44 @@
   padding: 0.5%;
 }
 .board {
+  display: flex;
+  flex-direction: column;
+
+
   width: 100%;
   height: 100%;
   background-color: white;
   border-radius: 0px 15px 15px 0px;
+}
+
+.close {
+ 
+  margin: 2vmin;
+  height: 5vmin;
+  border: 0;
+  position: relative;
+  background: 0;
+  font-size: 36px;
+  cursor: pointer;
+  background: transparent !important;
+}
+.close::after {
+  height: 4px;
+  width: 5vmin;
+  content: '';
+  position: absolute;
+  background: #000;
+  right: 3px;
+  transform: rotate(-45deg);
+  border-radius: 15px;
+}
+.close::before {
+  right: 3px;
+  height: 4px;
+  width: 5vmin;
+  content: '';
+  position: absolute;
+  background: #000;
+  transform: rotate(45deg);
+  border-radius: 15px;
 }
