--- a/src/pages/Rooms/rooms.module.scss
+++ b/src/pages/Rooms/rooms.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  height: 100%;
+  height: 95%;
   overflow-y: auto;
   border-radius: 15px;
-  // margin: 2vmin;
+  margin: 2vmin;
 }
