clear input after enter

--- a/src/pages/Game/game.module.scss
+++ b/src/pages/Game/game.module.scss
@@ -18,6 +18,9 @@
   background-color: #ffffff9e;
   padding: 0.5%;
 }
+.myplayer{
+  background-color: rgb(61, 150, 205);
+}
 .board {
   display: flex;
   flex-direction: column;
