enter on submit form test

--- a/src/pages/Auth/auth.module.scss
+++ b/src/pages/Auth/auth.module.scss
@@ -17,6 +17,16 @@
   justify-content: space-between;
 }
 
+.guestform, .loginform  {
+  display: flex;
+  flex-direction: column;
+  height: 55vmin;
+}
+
+.loginform {
+
+}
+
 .selectLogin {
   width: 100%;
 }
