added word input animations

--- a/src/pages/Game/parts/ActiveGame/activeGame.module.scss
+++ b/src/pages/Game/parts/ActiveGame/activeGame.module.scss
@@ -131,3 +131,45 @@
     1px 2px 1px #000000, -2px -1px 1px #000000, 2px -1px 1px #000000, -2px 1px 1px #000000, 2px 1px 1px #000000, -2px -2px 1px #000000, 2px -2px 1px #000000, -2px 2px 1px #000000, 2px 2px 1px #000000, -2px -2px 1px #000000, 2px -2px 1px #000000,
     -2px 2px 1px #000000, 2px 2px 1px #000000;
 }
+.red__animated{
+  animation: redblink 2s linear ;
+}
+.green__animated{
+  animation: greenblink 2s linear
+}
+.yellow__animated{
+  animation: yellowblink 2s linear
+}
+
+@keyframes greenblink {
+  0% {
+    border: 2px dashed green;
+  }
+  50% {
+    border: 3px dashed #005200;
+  }
+  100% {
+    border: 2px dashed darkgreen;
+  }
+}
+@keyframes yellowblink {
+  0% {
+    border: 2px dashed yellow;
+  }
+  50% {
+    border: 2px dashed #ffc400;
+  }
+  100% {
+    border: 2px dashed orange;
+  }
+} @keyframes redblink {
+    0% {
+      border: 2px dashed #ff0000;
+    }
+    50% {
+      border: 2px dashed darkred;
+    }
+    100% {
+      border: 2px dashed indianred;
+    }
+  }
