added enter on submit

--- a/src/components/Player/player.module.scss
+++ b/src/components/Player/player.module.scss
@@ -3,7 +3,7 @@
   z-index: 3;
   opacity: 1;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 2%;
   border-radius: 50px 12px 12px 50px;
