--- a/src/pages/Game/parts/ActiveGame/activeGame.module.scss
+++ b/src/pages/Game/parts/ActiveGame/activeGame.module.scss
@@ -59,6 +59,11 @@
     color: #ee6a6a;
   }
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
 .copy {
   position: relative;
   bottom: -20vmin;
