--- a/src/pages/Game/parts/ActiveGame/activeGame.module.scss
+++ b/src/pages/Game/parts/ActiveGame/activeGame.module.scss
@@ -2,7 +2,7 @@
   max-width: 100%;
   height: 100%;
   flex-grow: 1;
-  padding: 6vmin 15% 25vmin 15%;
+  margin: 6vmin 15% 25vmin 15%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,7 +11,7 @@
   & > * {
     white-space: nowrap;
     text-align: center;
-    width: 100%;
+    width: 80%;
   }
 
   & h2 {
